--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,7 @@ body{
 }
 
 .heading{
+    padding-top: 30px;
     padding-left: var(--headPadding);
     display: flex;
     flex-basis: 25%;
@@ -63,17 +64,15 @@ body{
 
 .todo-list ul{
     list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    text-align: center;
 }
 
 .item{
     background-color: #444343;
-    display: flex;
-    flex-direction: row;
+    /* display: flex; */
+    /* flex-direction: row; */
     margin: var(--listMargin);
-    flex-basis: calc(30% - var(--listMargin));
+    /* flex-basis: calc(30% - var(--listMargin)); */
     font-size: 2rem;
     justify-content:space-evenly;
     align-items: center;
@@ -136,6 +135,7 @@ body{
     }
     .item{
         margin-left: 0px;
+        margin-right: 30px;
     }
     .heading{
         margin: 0px;
