--- a/styles/styles.css
+++ b/styles/styles.css
@@ -90,7 +90,7 @@ body{
     font-size: 2rem;
     justify-content:space-evenly;
     align-items: center;
-    height: 5rem;
+    height: fit-content;
     color: #fff;
     border-radius: 5px;
 }
