--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,8 +80,8 @@ body{
 }
 
 .item{
-    /* background-color: #444343; */
-    background: url('https://images.pexels.com/photos/1655166/pexels-photo-1655166.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') no-repeat center center;
+    background-color: #44434362;
+    /* background: url('https://images.pexels.com/photos/1655166/pexels-photo-1655166.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') no-repeat center center; */
     background-size: cover;
     /* display: flex; */
     /* flex-direction: row; */
